client/src/pages/gallery-type/gallery-type.component.scss
:host {
  display: block;
  width: 100%;
  background-color: var(--LATTE);
}

// menu logic
.menu_container {
  width: 100%;
  display: flex;
  justify-content: center;
  background-color: var(--TOFFEE);
  padding: 0;
  margin: 0;
  position: fixed;
  top: 0;
  left: 0;
  z-index: 3;
}

nav {
  width: 100%;
  max-width: 1300px;
  display: flex;
  justify-content: flex-end;
  display: flex;
  padding: 2rem 1rem 1rem 2rem;
}

a {
  all: unset;
  cursor: pointer;
  color: var(--LATTE-ACCESSIBLE);
  font-size: 1.3rem;
  letter-spacing: 1px;
  line-height: 1;
}

a:not(:last-of-type) {
  margin-right: 1rem;
}

.activeLink {
  color: var(--LATTE-ACCESSIBLE);
  text-decoration: line-through;
}

// container logic
.gallery-container {
  width: 100%;
  max-width: 2000px;
  max-height: 100svh;
  margin: 0 auto;
  padding-bottom: 10rem;
  overflow-y: scroll;
  scroll-behavior: smooth;
  scroll-snap-type: y proximity !important; // must be !important, otherwise it doesn't work
}

.title-for-gallery {
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100svh; // smallest screen height, it is better then dvh (dynamic viewport height) cause it is better on look when it doesn't resize on scroll
  display: flex;
  position: relative;
  overflow: hidden;
  scroll-snap-align: start;

  img {
    width: 100%;
    height: 100%;
    object-fit: cover;
  }

  h1 {
    position: absolute;
    left: 25px;
    bottom: 25px;
    margin: 0;
    color: var(--LATTE);
    font-size: 3rem;
  }
}

.adjusted-title {
  object-position: 75%;
}

.pregnancy-title {
  object-position: 25%;
}

.description-for-gallery {
  width: 100%;
  display: flex;
  gap: 7rem;
  justify-content: space-between;
  align-items: center;
  height: auto;
  display: flex;
  flex-direction: column;
  position: relative;
  scroll-snap-align: start;
  padding: 5rem 3rem;

  .description,
  .tip {
    font: var(--FONT-PRIMARY);
    font-size: 1.5rem;
    letter-spacing: 1px;
    line-height: 1.2;
    text-align: center;
  }

  .description {
    width: 100%;
    max-width: 1564px;
    padding: 8rem 2rem 0;
  }
}

.selection-of-babies-variant {
  width: 100%;
  display: flex;
  justify-content: space-around;
  max-width: 100%;
  padding: 1rem 0 0;

  a {
    font-size: 1.8rem;
    font-weight: 600;
    letter-spacing: .5rem;
    margin: 0;
    color: var(--BROWNIE);
  }
}

.activeLinkSection {
  font-size: 1.6rem;
  font-weight: 500;
  letter-spacing: .5rem;
  margin: 0;
  text-decoration: underline;
}

.gallery-tips {
  display: flex;
  gap: 2rem;
  width: 100%;
  max-width: 32rem;
  overflow-x: auto;
  overflow-y: hidden;
  opacity: .85;
  scroll-snap-type: x mandatory !important; // must be !important, otherwise it doesn't work

  .tip {
    max-width: 32rem;
    width: 100%;
    padding: 0 2rem;
    flex-shrink: 0;
    scroll-snap-align: start;

    .tip-number {
      font-weight: 700;
    }
  }
}

.arrow-wrapper {
  display: flex;
  align-items: center;
  width: 100%;
  max-width: fit-content;
  position: relative;
}

.arrow-left,
.arrow-right {
  height: 5rem;
  opacity: .15;
}

.arrow-right {
  rotate: 180deg;
}

.arrow-smaller-left,
.arrow-smaller-right {
  height: 2rem;
  opacity: .15;
  position: absolute;
  display: none;
}

.arrow-smaller-left {
  top: calc(50% - 1rem);
  left: -1.665rem;
}

.arrow-smaller-right {
  top: calc(50% - 1rem);
  right: -1.665rem;
}


.arrow-smaller-right {
  rotate: 180deg;
}

.image-grid {
  min-height: 100svh;
  gap: .8rem;
  padding: 5.1rem 0.8rem 0.4rem;
  display: flex;
  scroll-snap-align: start;
}

.image-column {
  flex: 1;
  display: flex;
  flex-direction: column;
}

.image-card {
  padding: 0.2rem 0;
  width: 100%;
  break-inside: avoid;

  img {
    max-width: 100%;
    height: auto;
  }
}

.error-message {
  width: 100%;
  height: 100svh;
  display: flex;
  justify-content: center;
  flex-direction: column;
  text-align: center;
  padding: 0 2rem;
  color: var(--DANGER-SMOOTH);
  font-size: 1.6rem;
  scroll-snap-align: start;

  p {
    margin: 0;
  }
}

.error {
  margin-bottom: 1rem !important;
  color: var(--DANGER-SMOOTH);
  font-size: 4rem;
}

// smaller screens


@media screen and (max-width: 700px) {
  .title-for-gallery {

    h1 {
      font-size: 2.25rem;
    }
  }

  .description-for-gallery {
    .description {
      padding-left: 0;
      padding-right: 0;
    }
  }

  .arrow-wrapper {
    display: block;
  }

  .arrow-left,
  .arrow-right {
    display: none;
  }

  .arrow-smaller-left,
  .arrow-smaller-right {
    height: 2rem;
    opacity: .15;
    position: absolute;
    display: block;
  }

  .arrow-smaller-left {
    top: calc(50% - 1rem);
    left: -2.665rem;
  }

  .arrow-smaller-right {
    top: calc(50% - 1rem);
    right: -2.665rem;
  }


  .arrow-smaller-right {
    rotate: 180deg;
  }

  .gallery-tips {
    .tip {
      padding: 0;
    }
  }

  .selection-of-babies-variant {
    flex-direction: column;
    align-items: center;
    gap: 2rem;
  }
}

@media screen and (max-width: 540px) {
  .description-for-gallery {
    padding: 5rem 2rem;
  }

  .arrow-smaller-left {
    top: calc(50% - 1rem);
    left: -1.665rem;
  }

  .arrow-smaller-right {
    top: calc(50% - 1rem);
    right: -1.665rem;
  }

  .image-grid {
    gap: 0.3rem;
    padding: 5rem 0.3rem 0;
  }

  .image-card {
    padding: 0 0;
  }
}

